<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My First App</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>

    <string name="hello_world">Hello world!</string>
    <string name="my_title">eBay Search</string>
    <string name="test1">Keyword</string>
    <string name="test2">Price From</string>
    <string name="test3">Price To</string>
    <string name="test4">Sort By</string>
    <string name="clear">CLEAR</string>
    <string name="search">SEARCH</string>
    <string name="title_activity_forecast_fragment">ForecastFragment</string>
    <string name="spinner_prompt">ForecastFragment</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="facebook_app_id">686374151488774</string>

</resources>
